Fix padding and style scrollbar

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ a:visited {
 /*Header styles START*/
 .header {
   display: grid;
-  padding: 25px 50px;
+  padding: 15px 25px;
   gap: 1rem;
 }
 
@@ -197,8 +197,8 @@ label[for="search-bar"] {
 /*Sidebar styles START*/
 .sidebar {
   grid-row: 1 / 3;
-  padding: 0px 15px;
-  overflow-y: auto;
+  padding: 0px 5px;
+  overflow-y: scroll;
 }
 
 .sidebar > * {
@@ -210,7 +210,7 @@ label[for="search-bar"] {
   background-color: var(--main-background-color);
   display: flex;
   align-items: center;
-  padding: 25px 0px 10px 10px;
+  padding: 15px 10px 5px 10px;
   gap: 5px;
   position: sticky;
   top: 0;
@@ -282,8 +282,19 @@ label[for="search-bar"] {
   font-size: 12px;
   color: #717171;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 12px;
+}
 /*Sidebar styles END*/
 
+/*Content styles START*/
 .content {
   border: 1px solid red;
 }
+/*Content styles END*/
